fix: align popup content for RTL languages

--- a/umap/static/umap/css/popup.css
+++ b/umap/static/umap/css/popup.css
@@ -65,6 +65,7 @@ span.popup-icon {
 
 .leaflet-popup-content-wrapper {
     border-radius: 4px;
+    text-align: start;
 }
 
 .umap-popup-content {
